--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <title>about</title>
 </head>
 <body>
-  <div class="testlinkpage">
+  <div class="linkpage">
   <div class="about-title">
     about
   </div>
