--- a/christmas.html
+++ b/christmas.html
@@ -40,11 +40,11 @@
     <p>
       We can make a diagram to visualise the probability of each word following another word: 
     </p>
-    <img src="state-diagram.png" class="images">
+    <img style="width: 50%" src="state-diagram.png" class="images">
     <p>
       And we can even build up a matrix that represents these probabilities. This is called a <i>transition matrix</i>. The rows and columns of the matrix correspond to each unique word in the sentence:
     </p>
-    <img src="transition-matrix-1.png" class="images">
+    <img style="width: 50%" src="transition-matrix-1.png" class="images">
     <p>
       Then, if we want to figure out the probability of the word <i>Christmas</i> being followed by the word <i>and</i>, here's what we do. We go to the row of the transition matrix corresponding to the word <i>Christmas</i> (row 3), and look at the entries in this row. The probability corresponding to the word <i>and</i> is given by the entry in column 4, which is 0.5.
       </p>
