--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
   <div class="page-body"> 
     <p><b>Currently</b><br>Learning about AI and how to be a better programmer at the Recurse Center! <br> See my projects <a style="color: #fe6d73" href="projects.html">here</a>.</p>
     <p><b>Previously</b><br>A quantum cryptography researcher at Oxford. <br> Worked on building secure protocols for quantum networks. <br> See my research <a style="color: #227c9d" href="research.html">here</a>.</p>
+    <p><b>Contact</b><i> &bull; anu@anu-unnikrishnan.com</i></p>
     <br> <br> 
   </div>
   <div class="home">
