--- a/research.html
+++ b/research.html
@@ -16,8 +16,8 @@
     <p>
       Worked on building secure protocols for quantum networks.
       <br>
-      Here are my <a style="color: #227c9d" href="https://arxiv.org/a/unnikrishnan_a_1.html">publications</a> and <a style="color: #227c9d" href="https://ora.ox.ac.uk/objects/uuid:8309d4e8-5f4c-4e86-9381-fcaf2f6626f1">PhD thesis</a>.
-
+      Clarendon Laboratory, University of Oxford &bull; LIP6, Sorbonne Universit&eacute;.
+      
       <p>
         <b>Authenticated teleportation</b> 
         <br> 
@@ -34,6 +34,7 @@
         &middot; verifying multipartite entanglement in an untrusted network.<br>
       </p>
     </p>
+      Here are my <a style="color: #227c9d" href="https://arxiv.org/a/unnikrishnan_a_1.html">publications</a> and <a style="color: #227c9d" href="https://ora.ox.ac.uk/objects/uuid:8309d4e8-5f4c-4e86-9381-fcaf2f6626f1">PhD thesis</a>.
     </div>
     <br> <br> <br> 
   <div class="home">
