square-circle dot

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </div>
   <div class="links">
     <a style="color: #17c3b2" href="about.html">about</a>
-    &middot; 
+    <span style="font-family: helvetica">&bull;</span>
     <a style="color: #fe6d73" href="projects.html">projects</a> 
-    &middot;  
+    <span style="font-family: helvetica">&bull;</span>
     <a style="color: #227c9d" href="research.html">research</a> 
   </div>
 </div>
