--- a/christmas.html
+++ b/christmas.html
@@ -88,7 +88,7 @@
       <p>
       We then construct our transition matrix again, but now, each row corresponds to a unique block of words, and each column corresponds to a unique word:
       </p>
-      <img style="width: 70%" src="transition-matrix-2.png" class="images">
+      <img src="transition-matrix-2.png" class="images">
       <p>
         This means our chain will never choose the word following the block <i>loves Christmas</i> to be <i>tree</i>, and our problem is solved!
         </p>
@@ -125,13 +125,13 @@
         </p>
         
         <p>It came up with some pretty good storylines:</p>
-        <img style="width: 80%" src="goodplot-1.png" class="images">
-        <img style="width: 80%" src="goodplot-2.png" class="images">
-        <img style="width: 80%" src="goodplot-3.png" class="images">
+        <img src="goodplot-1.png" class="images">
+        <img src="goodplot-2.png" class="images">
+        <img src="goodplot-3.png" class="images">
         
         <p>And it also generated a few fun sentences:</p>
-        <img style="width: 80%" src="funplot-1.png" class="images">
-        <img style="width: 80%" src="funplot-2.png" class="images">
+        <img src="funplot-1.png" class="images">
+        <img src="funplot-2.png" class="images">
 
         <p>You can play around with it yourself <a style="color: #fe6d73;" href="https://christmas-movie-generator.herokuapp.com">here</a>!</p>
     </div>
