--- a/neural.html
+++ b/neural.html
@@ -30,11 +30,11 @@
       <p>
       Picking the number of layers, and the number of neurons in each layer, is something we can play around with. To start off with an easy example, let's say we want to train our network to find the XOR (exclusive-OR) of two inputs. Here's how the XOR works:
       </p>
-      <img style="width: 50%" src="xor-truth-table.png" class="images">
+      <img src="xor-truth-table.png" class="images">
       <p>
         Since we have two inputs and one output, let's create a simple network that has an input layer with 2 neurons, and an output layer with 1 neuron. Let's also have a single hidden layer that has 3 neurons (but we can play around with this). We're going to number our layers starting from 0. Here's what such a network looks like:
         </p>
-        <img style="width: 60%" src="neural-net-1.png" class="images">
+        <img src="neural-net-1.png" class="images">
         <p>
           The connections between neurons in different layers have <i>weights</i>, which tell us how much the input of a neuron in one layer matters to the output of a neuron in the next layer. Each neuron also has a <i>bias</i>, which is used to adjust the output. 
           </p>
@@ -42,13 +42,13 @@
           <p>
           Finally, we need to choose an <i>activation function</i> for each layer. This function takes the input to each neuron, which includes the corresponding weights and biases, and gives us an output that's within some desired range. We're going to use the <i>sigmoid &sigma;</i> as our activation function:
           </p>
-          <img style="width: 40%" src="sigmoid.png" class="images">
+          <img src="sigmoid.png" class="images">
           <h4>Setting up the matrices</h4>
 
           <p>
           Let's express all this in terms of matrices. First, what does our input and output data look like? We take each pair of inputs in our XOR table to be the following column vectors with their corresponding output:
           </p>
-          <img style="width: 40%" src="input-output-vectors.png" class="images">
+          <img src="input-output-vectors.png" class="images">
           <p>
             What about our weights and biases matrices? We need two weights matrices, one containing the weights of the connections between layers 0 and 1 (which we'll call <i>w<sup>0</sup></i>), and another for layers 1 and 2 (which we'll call <i>w<sup>1</sup></i>). 
             Then, let's say the <i>[j, k]<sup>th</sup></i> element of <i>w<sup>0</sup></i> is the weight connecting neuron <i>k</i> in layer 0 to neuron <i>j</i> in layer 1. Similarly, the <i>[j, k]<sup>th</sup></i> element of <i>w<sup>1</sup></i> is the weight connecting neuron <i>k</i> in layer 1 to neuron <i>j</i> in layer 2. 
@@ -61,11 +61,11 @@
             <p>
             Let's put these labels on our network picture:
             </p>
-            <img style="width: 60%" src="neural-net-2.png" class="images">
+            <img src="neural-net-2.png" class="images">
             <p>
               And to translate all that to matrix-speak:
               </p>
-              <img style="width: 40%" src="weights-biases-matrices.png" class="images">
+              <img src="weights-biases-matrices.png" class="images">
               <h4>Feedforward</h4>
               <p>
               What happens to our input data as it goes through the layers of our neural network? This is called <i>feedforward</i>. 
@@ -74,11 +74,11 @@
               <p>
               Let's see what goes on between layers 0 and 1. Our input is <i>x</i>, which first needs to be weighted using <i>w<sup>0</sup></i>, and added with the bias <i>b<sup>0</sup></i>, to give a term we'll call <i>z<sup>1</sup></i>. When this passes through the neurons in layer 1, it goes through the activation function <i>&sigma;</i>, giving an output that we'll denote <i>a<sup>1</sup></i>. We can write all this as simple equations: 
               </p>
-              <img style="width: 40%" src="feedforward-1.png" class="images">
+              <img src="feedforward-1.png" class="images">
               <p>
                 Similar things happen between layers 1 and 2! The input to layer 2 is now <i>a<sup>1</sup></i>, which goes through weighting, biasing and activation, to give an output <i>a<sup>2</sup></i>:
                 </p>
-                <img style="width: 40%" src="feedforward-2.png" class="images">
+                <img src="feedforward-2.png" class="images">
                 <p>
                   This is the output of our neural network! 
                   </p>
@@ -87,7 +87,7 @@
                   <p>
                   Now we've got an output, but just how bad is it? To figure this out, we use a <i>loss</i> function.  More specifically, we're going to use the <i>mean squared error</i> loss function:
                   </p>
-                  <img style="width: 50%" src="loss-function.png" class="images">
+                  <img src="loss-function.png" class="images">
                   <p>
                     The term <i>a<sup>L</sup></i> is the activation of the output layer <i>L</i>, so in our case, <i>L = 2</i>.
                     
@@ -99,7 +99,7 @@
                     To do this, we'll use a method called <i>backpropagation</i>. This algorithm tells us exactly how to adjust our network parameters by going backwards through the network. We first need to determine a parameter <i>&delta;<sup>l</sup></i> for each layer <i>l</i>, starting from the output layer <i>L</i>. 
                     To do this, we use the following equations:
                     </p>
-                    <img style="width: 40%" src="backprop-delta.png" class="images">
+                    <img src="backprop-delta.png" class="images">
                     <p>
                       There's a few things to note here. Firstly, since we're considering each input separately, we put <i>n = 1</i> in the loss function, which means its gradient with respect to <i>a</i> is simply <i>(a<sup>L</sup> &minus; y)</i>.
                       </p>
@@ -115,11 +115,11 @@
                       <p>
                       Then, we use <i>&delta;<sup>l</sup></i> to calculate the updates to each weight and bias matrix:
                       </p>
-    <img style="width: 40%" src="backprop.png" class="images">
+    <img src="backprop.png" class="images">
     <p>
       We update our weights and biases matrices, where <i>&eta;</i> is the learning rate (a parameter we can modify later):
       </p>
-      <img style="width: 40%" src="update-weights-biases.png" class="images">
+      <img src="update-weights-biases.png" class="images">
       <p>
         And then we do another feedforward! Each time we get to the output of our network, we calculate the loss function, and use backpropagation to figure out how much to change the weights and biases. And we keep repeating these steps for some number of <i>epochs</i>, which are full passes through the data. 
         </p>
@@ -136,7 +136,7 @@
         <p>
         To monitor how our neural network is doing, let's see how the loss decreases as we move through epochs and the network learns how to compute XOR:
         </p>
-        <img style="width: 60%" src="loss-graph.png" class="images">
+        <img src="loss-graph.png" class="images">
         <h4>Testing it out on a dataset</h4>
         <p>
         Let's try out our network on an actual dataset! We're going to use the banknote authentication <a style="color: #fe6d73;" href="https://archive.ics.uci.edu/ml/datasets/banknote+authentication">data</a> from UCI. There are four columns containing image characteristics of banknotes, and a fifth column that classifies each banknote as real or fake (indicated by either 0 or 1). 
@@ -156,7 +156,7 @@
         <p>
         We're ready to set our freshly built neural network loose on our test data! Let's see how its predictions on whether a banknote is real or fake compare to the actual answers:
         </p>
-        <img style="width: 60%" src="banknote-loss-graph.png" class="images">
+        <img src="banknote-loss-graph.png" class="images">
         <p>
           The loss stays pretty low for the set of test data, which our network has never seen before, so it's working! 
           </p>
