--- a/neural.html
+++ b/neural.html
@@ -92,7 +92,7 @@
                     The term <i>a<sup>L</sup></i> is the activation of the output layer <i>L</i>, so in our case, <i>L = 2</i>.
                     
                     <p>
-                    Our neural network learns by adjusting the weights and biases so that it can minimise the loss function. We're going to give the network one input at a time, and let it calculate the adjustments for that input. This is called <i>stochastic gradient descent</i>. 
+                    Our neural network learns by adjusting the weights and biases so that it can minimise the loss function. We're going to give the network one randomly chosen input at a time, and let it calculate the adjustments for that input. This is called <i>stochastic gradient descent</i>. 
                     </p>
                     
                     <p>
