--- a/christmas.html
+++ b/christmas.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>Can a Markov chain write the next hit Christmas movie?</i>
+      <div class="tagline">Can a Markov chain write the next hit Christmas movie?</div>
     </p>
     <p>
       Every year, generous TV networks bestow upon us many, many new tales of Christmas spirit, winter romance and adorable children. Those seasoned viewers among us may notice these movies follow a similar pattern: a woman with a great career in a big city finds herself in a small town over the holidays. Will she find love and the magic of Christmas? (The answer is always yes.)
