--- a/data.html
+++ b/data.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>Turning data files into web apps and maps.</i>
+      <div class="tagline">Turning data files into web apps and maps.</div>
     </p>
     <p>
       To practise some data cleaning, processing and visualisation, I made three fun websites about hiking, UFOs and bookshops! My main tools were Python to deal with the data files, Javascript for the web pages, and Heroku for hosting.
