--- a/lisp.html
+++ b/lisp.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>A very simple Lisp interpreter.</i>
+      <div class="tagline">A very simple Lisp interpreter.</div>
     </p>
     <p>
       To understand more about how our computers take the code we write and figure out what it means, I built a little interpreter in Python called Baby Lisp, which evaluates expressions written in the Lisp dialect <i>Scheme</i>. 
