--- a/maize.html
+++ b/maize.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>Escaping from a maze using reinforcement learning.</i>
+      <div class="tagline">Escaping from a maze using reinforcement learning.</div>
     </p>
     <p>
       Creating a maze-solving AI is a great way to figure out how reinforcement learning works. In this type of machine learning, we train our AI by giving it rewards when it does something good, and punishing it when it does something bad. By programming it to make decisions that will maximise the reward it gets, we can build quite a clever AI! 
