--- a/neural.html
+++ b/neural.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>Building a neural network from scratch.</i>
+      <div class="tagline">Building a neural network from scratch.</div>
     </p>
     <p>
       Neural networks can diagnose diseases, play board games better than world champions, and even tell the difference between cats and dogs.
