--- a/scrabble.html
+++ b/scrabble.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>Creating a crazy good Scrabble AI.</i>
+      <div class="tagline">Creating a crazy good Scrabble AI.</div>
     </p>
     <p>
       With the world in lockdown over the past few months, I've been playing a whole lot of Scrabble. So much, in fact, that I decided to make a little Scrabble game for the terminal, complete with an AI opponent that's pretty hard to beat. 
@@ -23,7 +23,6 @@
     <img src="scrabble-board.png" class="images">
 
     <h4>The rules</h4>
-
     <p>
       The game starts off with each player getting seven random letters from a bag, and taking it in turns to make words on the Scrabble board. Each new addition to the board must give us words that make sense when read both up-to-down and left-to-right. Every time a player uses up some letters, they take new letters from the bag. 
     </p>
