--- a/tic.html
+++ b/tic.html
@@ -14,7 +14,7 @@
   </div>
   <div class="page-body"> 
     <p>
-      <i>How to make an AI that will never lose a game of Tic-Tac-Toe.</i>
+      <div class="tagline">How to make an AI that will never lose a game of Tic-Tac-Toe.</div>
     </p>
     <p>
       Making an unbeatable AI may sound intimidating, so it helps to start learning the tricks through a very simple game like Tic-Tac-Toe.
