--- a/christmas.html
+++ b/christmas.html
@@ -125,13 +125,33 @@
         </p>
         
         <p>It came up with some pretty good storylines:</p>
-        <img src="goodplot-1.png" class="images">
-        <img src="goodplot-2.png" class="images">
-        <img src="goodplot-3.png" class="images">
+
+        <div class="pseudocode">
+          A woman who is a hotel manager returns to Memphis for the lifestyle magazine
+          at which she has landed a temporary job as the owner of the past.
+
+          <br><br>
+          A woman leaves everything behind in Boston to embark on a hunt to find
+          out how to break down the wall between her and Nick, as this could be
+          the opportunity that jump-starts her career.
+
+          <br><br>
+          A woman accepts a position as a governess for a wealthy widower while
+          awaiting news about a Christmas miracle to write about for the holidays
+          fast approaching. She must figure out who the mystery suitor is and if
+          she's finally found love where least expected.
+        </div>
         
         <p>And it also generated a few fun sentences:</p>
-        <img src="funplot-1.png" class="images">
-        <img src="funplot-2.png" class="images">
+
+        <div class="pseudocode">
+          ...She assumes he is the suitor her well-meaning mother is trying
+          to set her up with, when in reality, he is the suitor her 
+          well-meaning mother is trying to set her up with.
+
+          <br><br>
+          ...Candy cane company meets a man during the busy Christmas season.
+        </div>
 
         <p>You can play around with it yourself <a style="color: #fe6d73;" href="https://christmas-movie-generator.herokuapp.com">here</a>!</p>
     </div>
