--- a/lisp.html
+++ b/lisp.html
@@ -117,7 +117,23 @@
                   <p>
                   Let's see Baby Lisp in action!
                   </p>
-                  <img src="lisp-eval.png" class="images">
+
+                  <div class="pseudocode">
+                    babylisp> (+ 2 (* 3 4))
+                    <br>14
+                    <br><br>babylisp> (begin (define a 10) (define b 20) (+ a b))
+                    <br>30
+                    <br><br>babylisp> (if (< 4 (expt 2 2)) (list 30 20) (list 2 3))
+                    <br>(2 3)
+                    <br><br>babylisp> (car (list 1 2 (list 3 4)))
+                    <br>1
+                    <br><br>babylisp> (cdr (list 1 2 (list 3 4)))
+                    <br>(2 (3 4))
+                    <br><br>babylisp> (if (>= (sqrt 3.13) 1) (+ 3.13 2.13) (* 3.13 2))
+                    <br>5.26
+                    <br><br>babylisp> (quit)
+                    <br>bye.
+                  </div>
 
     </div>
     <br> 
